--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,12 +11,15 @@
     <color name="bordergray">#dcdcdc</color>
     <color name="borderBlack">#6c6c6c</color>
     <color name="black">#000000</color>
-    <color name="lightBlue">#85c8f7</color>
+    <color name="lightBlue">#a3d9ff</color>
     <color name="darkBlue">#014270</color>
     <color name="lightBlack">#262626</color>
     <color name="trans_lightBlack">#aa262626</color>
     <color name="darkWhite">#c6c6c6</color>
     <color name="strongDarkWhite">#ababab</color>
     <color name="trans_white">#66262626</color>
+    <color name="red">#ff0000</color>
+    <color name="dardGray">#5d5858</color>
+    <color name="progressBarLightBlue">#a3d9ff</color>
 
 </resources>
