--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <!--Common-->
+        <!--Dimen-->
     <dimen name="dimen_16dp">16dp</dimen>
     <dimen name="dimen_8dp">8dp</dimen>
     <dimen name="dimen_10dp">10dp</dimen>
@@ -8,10 +11,50 @@
     <dimen name="dimen_10sp">10sp</dimen>
     <dimen name="dimen_4dp">4dp</dimen>
     <dimen name="dimen_2dp">2dp</dimen>
+
+        <!--Padding-->
+    <dimen name="padding_2dp">2dp</dimen>
+    <dimen name="padding_8dp">8dp</dimen>
+    <dimen name="padding_5dp">5dp</dimen>
+    <dimen name="padding_16dp">16dp</dimen>
+
+        <!--Margin-->
+    <dimen name="margin_5dp">5dp</dimen>
+    <dimen name="margin_8dp">8dp</dimen>
+    <dimen name="margin_14dp">14dp</dimen>
+    <dimen name="margin_16dp">16dp</dimen>
+    <dimen name="margin_20dp">20dp</dimen>
+    <dimen name="margin_40dp">40dp</dimen>
+
+        <!--Toolbar header-->
     <dimen name="toolbar_height_40dp">40dp</dimen>
+
+        <!--textSize-->
+    <dimen name="text_size_10sp">10dp</dimen>
+    <dimen name="text_size_11sp">11sp</dimen>
+    <dimen name="text_size_12sp">12sp</dimen>
+    <dimen name="text_size_13sp">13sp</dimen>
+
+        <!--height-->
+    <dimen name="height_25dp">25dp</dimen>
+    <dimen name="height_30dp">30dp</dimen>
+    <dimen name="height_35dp">35dp</dimen>
+    <dimen name="height_40dp">40dp</dimen>
+    <dimen name="height_45dp">45dp</dimen>
+
+    <!--Music UI-->
     <dimen name="tab_title_width">180dp</dimen>
     <dimen name="tab_title_text_size">12sp</dimen>
     <dimen name="tab_title_radius">3dp</dimen>
+    <dimen name="title_text_size_16dp">16dp</dimen>
+    <dimen name="player_collapse_image_size_40dp">40dp</dimen>
+    <dimen name="player_collapse_height_50dp">50dp</dimen>
+    <dimen name="player_list_song_layout_height_250dp">250dp</dimen>
+    <dimen name="player_ic_back_image_size_20dp">20dp</dimen>
+    <dimen name="icon_control_player_image_size_20dp">20dp</dimen>
+    <dimen name="layout_control_player_size_30dp">30dp</dimen>
+
+
     <dimen name="title_text_size">15sp</dimen>
     <dimen name="view_pager_height">130dp</dimen>
     <dimen name="album_text_size">11sp</dimen>
@@ -34,4 +77,26 @@
     <dimen name="ic_album_overflow_height">30dp</dimen>
     <dimen name="ic_album_overflow_margin_top">10dp</dimen>
 
+    <!--Login UI-->
+    <dimen name="login_width_230dp">230dp</dimen>
+    <dimen name="login_heigth_35dp">35dp</dimen>
+    <dimen name="image_login_size_20dp">20dp</dimen>
+    <dimen name="image_login_size_30dp">30dp</dimen>
+    <dimen name="login_text_sỉze">12sp</dimen>
+    <dimen name="margin_top">20dp</dimen>
+    <dimen name="btn_margin_top_30dp">30dp</dimen>
+    <dimen name="margin_left">15dp</dimen>
+    <dimen name="invalid_text_size">10sp</dimen>
+    <dimen name="sign_in_with_text_size">11sp</dimen>
+    <dimen name="length_line_30dp">30dp</dimen>
+    <dimen name="login_border">0.6dp</dimen>
+
+    <!--Search-->
+    <dimen name="image_category_size_20dp">20dp</dimen>
+    <dimen name="search_title_text_size_14sp">14sp</dimen>
+    <dimen name="search_result_image_size_40dp">40dp</dimen>
+
+    <!--User Profile-->
+    <dimen name="avatar_image_height_180dp">180dp</dimen>
+    <dimen name="logout_playlist_title_text_size_13dp">12dp</dimen>
 </resources>
