--- a/app/src/main/res/layout/artist_music_content.xml
+++ b/app/src/main/res/layout/artist_music_content.xml
@@ -24,6 +24,6 @@
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/white"
+        android:background="@color/lightBlack"
         android:backgroundTint="@color/lightBlack"/>
 </LinearLayout>
