--- a/app/src/main/res/layout/fm_player_collapse.xml
+++ b/app/src/main/res/layout/fm_player_collapse.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#ededed"
+    android:background="#66894ece"
 
     >
 
@@ -36,7 +36,7 @@
             android:layout_height="wrap_content"
             android:text="TextView"
             android:padding="@dimen/padding_2dp"
-            android:textColor="#000000"
+            android:textColor="@color/white"
             android:textSize="@dimen/text_size_12sp" />
 
         <TextView
@@ -45,7 +45,7 @@
             android:layout_height="wrap_content"
             android:padding="@dimen/padding_2dp"
             android:text="TextView"
-            android:textColor="#aaaaaa"
+            android:textColor="@color/lightgray"
             android:textSize="@dimen/text_size_10sp" />
         </LinearLayout>
 
