--- a/app/src/main/res/layout/info_content_item.xml
+++ b/app/src/main/res/layout/info_content_item.xml
@@ -47,7 +47,7 @@
                     android:layout_centerInParent="true"
                     >
 
-                    <View
+                    <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:background="@drawable/ic_keyboard_arrow_down_black_24dp" />
