--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -42,7 +42,6 @@
             android:orientation="vertical">
             <TextView
                 android:id="@+id/tvTitleSong"
-                android:text="Song name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -50,7 +49,6 @@
                 android:textColor="@color/white"/>
             <TextView
                 android:id="@+id/tvArtTistSong"
-                android:text="Artist name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -72,8 +70,7 @@
             android:id="@+id/interactivePlayerView"
             android:layout_width="200dp"
             android:layout_height="200dp"
-            android:layout_centerInParent="true"
-            app:imageCover="@drawable/bg"/>
+            android:layout_centerInParent="true"/>
         <!--app:selectedAction1="@drawable/shuffle_selected"-->
         <!--app:selectedAction3="@drawable/replay_selected"-->
         <!--app:unselectedAction1="@drawable/shuffle_unselected"-->
@@ -143,7 +140,6 @@
                 android:id="@+id/rc_player_list"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_margin="16dp"
                 />
 
         </LinearLayout>
