--- a/app/src/main/res/layout/song_player_item.xml
+++ b/app/src/main/res/layout/song_player_item.xml
@@ -1,63 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/song_card"
-    >
-
-    <android.support.v7.widget.CardView
-        android:id="@+id/cvSongPlayer"
-        android:layout_width="match_parent"
+    android:layout_height="60dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <RelativeLayout
+        android:id="@+id/rl_img_index"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/margin_5dp"
-        >
-
-        <RelativeLayout
-            android:layout_width="match_parent"
+        android:layout_centerVertical="true">
+        <LinearLayout
+            android:id="@+id/ll_index"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:gravity="center"
+            android:visibility="visible"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true">
+            <TextView
+                android:id="@+id/tv_index"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="1"
+                android:textSize="14sp"
+                android:textColor="@color/white"/>
+        </LinearLayout>
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@+id/rl_img_index"
+        android:layout_centerVertical="true"
+        android:layout_toStartOf="@+id/ll_add">
+        <TextView
+            android:id="@+id/tv_song_name"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:background="@color/black"
-            android:paddingBottom="@dimen/padding_8dp"
-            android:paddingLeft="@dimen/padding_16dp"
-            android:paddingRight="@dimen/padding_16dp"
-            android:paddingTop="@dimen/padding_8dp">
+            android:maxLines="1"
+            android:ellipsize="end"
+            android:text="ten bai hat"
+            android:textSize="@dimen/album_text_size"
+            android:textColor="@color/white"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true" />
+        <TextView
+            android:id="@+id/tv_artist_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:maxLines="1"
+            android:ellipsize="end"
+            android:text="vu cat tuong"
+            android:layout_below="@+id/tv_song_name"
+            android:textSize="@dimen/album_text_size_2"
+            android:paddingTop="@dimen/dimen_2dp"
+            android:textColor="@color/darkWhite"/>
+    </RelativeLayout>
 
-            <ImageView
-                android:id="@+id/imgSongPlayer"
-                android:layout_width="@dimen/search_result_image_size_40dp"
-                android:layout_height="@dimen/search_result_image_size_40dp"
-                android:background="@color/lightBlue"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentStart="true" />
+    <LinearLayout
+        android:id="@+id/ll_about"
+        android:layout_width="40dp"
+        android:layout_height="match_parent"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:gravity="center">
 
-            <TextView
-                android:id="@+id/tvSongTitlePlayer"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/margin_8dp"
-                android:layout_toEndOf="@+id/imgSongPlayer"
-                android:text="ten bai hat"
-                android:textSize="@dimen/text_size_13sp"
-                android:textColor="@color/white"
-                android:textStyle="bold" />
+        <ImageView
+            android:id="@+id/iv_about"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:src="@drawable/ic_about" />
+    </LinearLayout>
 
-            <TextView
-                android:id="@+id/tvSongSingerPlayer"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/tvSongTitlePlayer"
-                android:layout_gravity="center_vertical"
-                android:layout_marginStart="@dimen/margin_8dp"
-                android:layout_toEndOf="@+id/imgSongPlayer"
-                android:ellipsize="marquee"
-                android:lines="1"
-                android:maxLines="1"
-                android:text="Ten ca si"
-                android:textColor="@color/lightgray"
-                android:textSize="@dimen/text_size_11sp" />
-        </RelativeLayout>
+    <LinearLayout
+        android:id="@+id/ll_add"
+        android:layout_width="40dp"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:layout_alignParentTop="true"
+        android:layout_toStartOf="@+id/ll_about">
 
-
-    </android.support.v7.widget.CardView>
+        <ImageView
+            android:id="@+id/iv_add"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:src="@drawable/ic_add"
+            />
+    </LinearLayout>
 
 </RelativeLayout>
