--- a/app/src/main/res/layout/fm_setting.xml
+++ b/app/src/main/res/layout/fm_setting.xml
@@ -1,15 +1,173 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     android:background="@color/lightBlack"
     >
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:textColor="#b0b0ff"
-        android:textSize="20sp"
-        android:id="@+id/msg"/>
-</LinearLayout>
+    <LinearLayout
+        android:id="@+id/header"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/toolbar_height_40dp"
+            android:background="@drawable/bg_header">
+            <TextView
+                android:id="@+id/tv_header_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/title_text_size"
+                android:textColor="@color/white"
+                android:layout_centerInParent="true"
+                android:text="Settings"/>
+        </RelativeLayout>
+
+    </LinearLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/lightBlack"
+        android:paddingLeft="@dimen/dimen_16dp"
+        android:paddingRight="@dimen/dimen_16dp"
+        android:layout_below="@+id/header">
+        <LinearLayout
+            android:id="@+id/title_music_setting"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <include
+                android:id="@+id/title_music"
+                layout="@layout/title_name"
+            />
+        </LinearLayout>
+        <RelativeLayout
+            android:id="@+id/rl_row_1"
+            android:layout_below="@+id/title_music_setting"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_16dp">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_toStartOf="@+id/ll_swich_1"
+                android:text="Phát nhạc dưới nền"
+                android:textColor="@color/white"/>
+            <LinearLayout
+                android:id="@+id/ll_swich_1"
+                android:layout_width="60dp"
+                android:layout_height="20dp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true">
+                <include
+                    android:id="@+id/swich_btn_1"
+                    layout="@layout/swich_button" />
+            </LinearLayout>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/rl_row_2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/rl_row_1"
+            android:layout_marginTop="@dimen/margin_16dp">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_toStartOf="@+id/ll_swich_2"
+                android:text="Tiếp tục phát khi gắn tai phone"
+                android:textColor="@color/white"/>
+            <LinearLayout
+                android:id="@+id/ll_swich_2"
+                android:layout_width="60dp"
+                android:layout_height="20dp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true">
+                <include
+                    android:id="@+id/swich_btn_2"
+                    layout="@layout/swich_button" />
+            </LinearLayout>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/rl_row_3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/rl_row_2"
+            android:layout_marginTop="@dimen/margin_16dp">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Tự động dừng phát nhạc"
+                android:textColor="@color/white"
+                android:layout_centerVertical="true"/>
+            <RelativeLayout
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:background="@drawable/spiner_background"
+                android:layout_centerVertical="true"
+                android:layout_alignParentEnd="true">
+
+                <Spinner
+                    android:id="@+id/spinner"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_gravity="center"
+                    android:background="@android:color/transparent"
+                    android:gravity="center"
+                    android:layout_marginLeft="5dp"
+                    android:spinnerMode="dropdown"
+                    android:popupBackground="#aaaaaa"/>
+
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_gravity="center"
+                    android:src="@drawable/drop" />
+
+            </RelativeLayout>
+
+        </RelativeLayout>
+
+        <LinearLayout
+            android:id="@+id/title_history_setting"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/rl_row_3"
+            android:layout_marginTop="@dimen/margin_16dp">
+            <include
+                android:id="@+id/title_history"
+                layout="@layout/title_name"
+                />
+        </LinearLayout>
+
+        <RelativeLayout
+            android:id="@+id/rl_row_4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/title_history_setting"
+            android:layout_marginTop="@dimen/margin_16dp">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_toStartOf="@+id/ll_swich_3"
+                android:text="Lưu lịch sử tìm kiếm"
+                android:textColor="@color/white"/>
+            <LinearLayout
+                android:id="@+id/ll_swich_3"
+                android:layout_width="60dp"
+                android:layout_height="20dp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true">
+                <include
+                    android:id="@+id/swich_btn_3"
+                    layout="@layout/swich_button" />
+            </LinearLayout>
+        </RelativeLayout>
+
+    </RelativeLayout>
+
+</RelativeLayout>
