--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -14,11 +14,12 @@
         android:layout_above="@+id/latestAddedSongs"
         android:scaleType="centerCrop" />
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/llToolbar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/toolbar_height_40dp"
         android:background="@drawable/bg_header"
+        android:orientation="horizontal"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true">
 
@@ -30,16 +31,20 @@
 
             <ImageView
                 android:id="@+id/btnBack"
-                android:layout_width="@dimen/player_ic_back_image_size_20dp"
-                android:layout_height="@dimen/player_ic_back_image_size_20dp"
+                android:layout_width="@dimen/player_ic_back_image_size_25dp"
+                android:layout_height="@dimen/player_ic_back_image_size_25dp"
                 android:src="@drawable/ic_back"/>
 
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_marginRight="@dimen/toolbar_height_40dp"
+            android:layout_marginEnd="@dimen/toolbar_height_40dp"
+            android:layout_marginLeft="@dimen/toolbar_height_40dp"
+            android:layout_marginStart="@dimen/toolbar_height_40dp">
             <TextView
                 android:id="@+id/tvTitleSong"
                 android:layout_width="wrap_content"
@@ -56,7 +61,22 @@
                 android:textColor="@color/lightgray"/>
         </LinearLayout>
 
-    </LinearLayout>
+        <LinearLayout
+            android:id="@+id/llVolumn"
+            android:layout_width="@dimen/toolbar_height_40dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="right"
+            android:layout_alignParentRight="true"
+            android:gravity="center">
+
+            <ImageView
+                android:id="@+id/imgVolumn"
+                android:layout_width="@dimen/player_ic_player_image_size_20dp"
+                android:layout_height="@dimen/player_ic_player_image_size_20dp"
+                android:src="@drawable/ic_volumn"/>
+        </LinearLayout>
+
+    </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/songPlayerTopLayout"
