--- a/app/src/main/res/layout/add_playlist_box.xml
+++ b/app/src/main/res/layout/add_playlist_box.xml
@@ -3,8 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="15dp"
-    android:background="@color/lightBlue">
+    android:padding="15dp">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rc_playlists"
