--- a/app/src/main/res/layout/fm_search.xml
+++ b/app/src/main/res/layout/fm_search.xml
@@ -14,73 +14,151 @@
         android:orientation="vertical"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true">
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/toolbar_height_40dp"
-        android:background="@drawable/bg_header">
 
-        <include layout="@layout/search_view"/>
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    <RelativeLayout
-        android:id="@+id/rlTitleHistory"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/height_35dp">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:gravity="center">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:padding="@dimen/padding_8dp"
-                android:text="@string/search_history"
-                android:textColor="@color/white"
-                android:gravity="center"
-                android:textSize="@dimen/text_size_12sp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/llClearHistory"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:layout_alignParentRight="true">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="@dimen/padding_8dp"
-                android:text="@string/clear_history"
-                android:textColor="@color/lightBlue"
-                android:textSize="@dimen/text_size_12sp" />
-        </LinearLayout>
-
-    </RelativeLayout>
-
-    <!--<View-->
-        <!--android:id="@+id/view1"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="1dp"-->
-        <!--android:layout_marginTop="@dimen/height_35dp"-->
-        <!--android:background="@color/white" />-->
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/height_35dp">
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rcHistory"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </LinearLayout>
-    </RelativeLayout>
+            android:layout_height="@dimen/toolbar_height_40dp"
+            android:background="@drawable/bg_header">
+
+            <include layout="@layout/search_view"/>
+        </RelativeLayout>
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_margin="@dimen/margin_3dp">
+
+                <RelativeLayout
+                    android:id="@+id/rlTopSongView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <RelativeLayout
+                        android:id="@+id/rlTilteTopSongView"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/height_35dp"
+                        android:background="@color/titleColorDark">
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:gravity="center">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:padding="@dimen/padding_8dp"
+                                android:text="@string/top_song_view"
+                                android:textColor="@color/white"
+                                android:gravity="center"
+                                android:textSize="@dimen/text_size_13sp" />
+                        </LinearLayout>
+
+                    </RelativeLayout>
+
+                    <View
+                        android:id="@+id/view1"
+                        android:layout_width="match_parent"
+                        android:layout_height="0.5dp"
+                        android:layout_marginTop="@dimen/height_35dp"
+                        android:background="@color/dardGray" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="@dimen/height_35dp">
+
+                        <android.support.v7.widget.RecyclerView
+                            android:id="@+id/rcTopSongView"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"/>
+                    </LinearLayout>
+
+                </RelativeLayout>
+
+                <View
+                    android:id="@+id/view3"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/dardGray" />
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    >
+
+                    <RelativeLayout
+                        android:id="@+id/rlTitleHistory"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/height_35dp"
+                        android:background="@color/titleColorDark">
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:gravity="center">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:padding="@dimen/padding_8dp"
+                                android:text="@string/search_history"
+                                android:textColor="@color/white"
+                                android:gravity="center"
+                                android:textSize="@dimen/text_size_13sp" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:id="@+id/llClearHistory"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:gravity="center"
+                            android:layout_alignParentRight="true">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:padding="@dimen/padding_8dp"
+                                android:text="@string/clear_history"
+                                android:textColor="@color/lightBlue"
+                                android:textSize="@dimen/text_size_12sp" />
+                        </LinearLayout>
+
+                    </RelativeLayout>
+
+                    <View
+                        android:id="@+id/view2"
+                        android:layout_width="match_parent"
+                        android:layout_height="0.5dp"
+                        android:layout_marginTop="@dimen/height_35dp"
+                        android:background="@color/dardGray" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="@dimen/height_35dp"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/tvHistoryResult"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/white"
+                            android:textSize="@dimen/text_size_12sp"
+                            android:layout_marginLeft="@dimen/margin_5dp"/>
+
+                        <android.support.v7.widget.RecyclerView
+                            android:id="@+id/rcHistory"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent" />
+                    </LinearLayout>
+                </RelativeLayout>
+            </LinearLayout>
+        </ScrollView>
     </LinearLayout>
 </RelativeLayout>
