--- a/app/src/main/res/layout/song_item.xml
+++ b/app/src/main/res/layout/song_item.xml
@@ -75,13 +75,13 @@
         android:id="@+id/ll_about"
         android:layout_width="40dp"
         android:layout_height="match_parent"
-        android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:gravity="center">
+        android:gravity="center"
+        android:layout_alignParentEnd="true">
 
         <ImageView
             android:id="@+id/iv_about"
-            android:layout_width="wrap_content"
+            android:layout_width="@dimen/item_width_20dp"
             android:layout_height="fill_parent"
             android:src="@drawable/ic_about" />
     </LinearLayout>
@@ -96,7 +96,7 @@
 
         <ImageView
             android:id="@+id/iv_add"
-            android:layout_width="wrap_content"
+            android:layout_width="@dimen/item_width_25dp"
             android:layout_height="fill_parent"
             android:src="@drawable/ic_add"
             />
