--- a/app/src/main/res/layout/fm_music_hot.xml
+++ b/app/src/main/res/layout/fm_music_hot.xml
@@ -10,8 +10,10 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     style="@style/NestedScrollBarStyle"
     >
+
     <LinearLayout
-        android:orientation="vertical" android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <include layout="@layout/view_pager"/>
