--- a/app/src/main/res/layout/song_info_content.xml
+++ b/app/src/main/res/layout/song_info_content.xml
@@ -43,7 +43,7 @@
                     android:id="@+id/iv_add"
                     android:layout_width="fill_parent"
                     android:layout_height="match_parent"
-                    android:src="@drawable/icon_add"
+                    android:src="@drawable/ic_add"
                     android:layout_toStartOf="@+id/border"/>
                 <LinearLayout
                     android:id="@+id/border"
@@ -68,7 +68,7 @@
             android:orientation="vertical"
             android:layout_below="@+id/rl_header">
 
-            <include layout="@layout/infor_title_name"
+            <include layout="@layout/title_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/title_singers"
@@ -85,7 +85,7 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-            <include layout="@layout/infor_title_name"
+            <include layout="@layout/title_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/title_composers" />
