--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -41,8 +41,7 @@
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:layout_marginRight="@dimen/toolbar_height_40dp"
-            android:layout_marginEnd="@dimen/toolbar_height_40dp"
+            android:layout_toLeftOf="@+id/llTimerChecked"
             android:layout_marginLeft="@dimen/toolbar_height_40dp"
             android:layout_marginStart="@dimen/toolbar_height_40dp">
             <TextView
@@ -59,6 +58,20 @@
                 android:layout_weight="1"
                 android:textSize="@dimen/text_size_11sp"
                 android:textColor="@color/lightgray"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/llTimerChecked"
+            android:layout_width="@dimen/toolbar_height_40dp"
+            android:layout_height="match_parent"
+            android:layout_toLeftOf="@+id/llVolumn"
+            android:gravity="center">
+
+            <ImageView
+                android:id="@+id/imgTimerChecked"
+                android:layout_width="@dimen/timer_image_size_25dp"
+                android:layout_height="@dimen/timer_image_size_25dp"
+                android:src="@drawable/timer_unchecked"/>
         </LinearLayout>
 
         <LinearLayout
