--- a/app/src/main/res/layout/fm_login.xml
+++ b/app/src/main/res/layout/fm_login.xml
@@ -69,7 +69,7 @@
                         <EditText
                             android:id="@+id/edEmail"
                             android:imeActionLabel="Xong"
-                            android:imeOptions="actionNext"
+                            android:imeOptions="actionDone"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="@drawable/edittext_login_selector"
