--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -26,6 +26,7 @@
     <dimen name="margin_16dp">16dp</dimen>
     <dimen name="margin_20dp">20dp</dimen>
     <dimen name="margin_40dp">40dp</dimen>
+    <dimen name="margin_80dp">80dp</dimen>
 
         <!--Toolbar header-->
     <dimen name="toolbar_height_40dp">40dp</dimen>
@@ -55,6 +56,7 @@
     <dimen name="icon_control_player_image_size_20dp">20dp</dimen>
     <dimen name="layout_control_player_size_30dp">30dp</dimen>
     <dimen name="player_ic_player_image_size_20dp">20dp</dimen>
+    <dimen name="timer_image_size_25dp">25dp</dimen>
 
 
     <dimen name="title_text_size">15sp</dimen>
@@ -104,4 +106,9 @@
 
     <dimen name="item_width_20dp">20dp</dimen>
     <dimen name="item_width_25dp">25dp</dimen>
+
+    <!--Setting-->
+    <dimen name="switch_width_60dp">60dp</dimen>
+    <dimen name="switch_height_23dp">23dp</dimen>
+    <dimen name="row_height_40dp">40dp</dimen>
 </resources>
