--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -98,7 +98,6 @@
         android:layout_below="@+id/llToolbar"
         android:layout_alignParentStart="true">
 
-
         <co.mobiwise.library.InteractivePlayerView
             android:id="@+id/interactivePlayerView"
             android:layout_width="200dp"
@@ -126,6 +125,25 @@
             android:layout_marginRight="10dp"
             android:layout_toLeftOf="@+id/interactivePlayerView"
             android:background="@android:drawable/ic_media_previous" />
+
+        <LinearLayout
+            android:id="@+id/llControlVolumn"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/volumn_height_60dp"
+            android:layout_centerInParent="true"
+            android:background="#383333"
+            android:layout_marginLeft="@dimen/margin_16dp"
+            android:layout_marginRight="@dimen/margin_16dp">
+
+            <SeekBar
+                android:id="@+id/sbVolumn"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="@dimen/margin_8dp"
+                android:pointerIcon="all_scroll"
+                android:progressBackgroundTint="#1462f1"/>
+
+        </LinearLayout>
 
     </RelativeLayout>
 
