--- a/app/src/main/res/layout/info_content_item.xml
+++ b/app/src/main/res/layout/info_content_item.xml
@@ -85,7 +85,7 @@
                 <RelativeLayout
                     android:id="@+id/row"
                     android:layout_width="match_parent"
-                    android:layout_height="60dp">
+                    android:layout_height="wrap_content">
                     <ImageView
                         android:id="@+id/iv_avatar"
                         android:layout_width="@dimen/dimen_60dp"
@@ -97,7 +97,7 @@
                         android:text="Adele"
                         android:layout_toEndOf="@+id/iv_avatar"
                         android:layout_marginStart="@dimen/dimen_16dp"
-                        android:textSize="16sp"
+                        android:textSize="13sp"
                         android:textColor="@color/white"/>
                     <TextView
                         android:id="@+id/tv_views"
